# packet_analyzer

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  GETTING_STARTED.md  README.md  WINDOWS_SETUP.md  generate_test_pcap.py  netlify.toml  output.pca  package.json  test_dpi.pcap
client/: index.html  package-lock.json  package.json  vite.config.js
client/src/: App.css  App.jsx  config.js
client/src/components/: BlockingRules.jsx  DropZone.jsx  Header.jsx  Loading.jsx  Results.jsx
include/: connection_tracker.h  dpi_engine.h  dpi_processor.h  fast_path.h  load_balancer.h  packet_parser.h  pcap_reader.h  platform.h  rule_manager.h  sni_extractor.h  thread_safe_queue.h  types.h
server/: index.js  package-lock.json  package.json
server/routes/: api.js
src/: connection_tracker.cpp  dpi_engine.cpp  dpi_mt.cpp  dpi_processor.cpp  fast_path.cpp  load_balancer.cpp  main.cpp  main_dpi.cpp  main_json.cpp  main_simple.cpp  main_working.cpp  packet_parser.cpp  pcap_reader.cpp  rule_manager.cpp  sni_extractor.cpp  types.cpp
web/: build_api.py  server.py
web/static/: app.js  style.css
web/templates/: index.html
